--- a/LC-Finder.vcxproj.filters
+++ b/LC-Finder.vcxproj.filters
@@ -21,15 +21,24 @@
     <ClCompile Include="src\main.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\lib\db.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\main.css">
       <Filter>相关资源</Filter>
     </None>
+    <None Include="LICENSE" />
   </ItemGroup>
   <ItemGroup>
     <Xml Include="res\ui.xml">
       <Filter>相关资源</Filter>
     </Xml>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="include\db.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
