--- a/LC-Finder.vcxproj
+++ b/LC-Finder.vcxproj
@@ -28,10 +28,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="LICENSE" />
+    <None Include="README.md" />
     <None Include="res\main.css" />
   </ItemGroup>
   <ItemGroup>
-    <Xml Include="res\ui.xml" />
+    <Xml Include="res\ui.xml">
+      <SubType>Designer</SubType>
+    </Xml>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\file_cache.h" />
