--- a/LC-Finder.vcxproj
+++ b/LC-Finder.vcxproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <ClInclude Include="include\file_cache.h" />
     <ClInclude Include="include\file_search.h" />
+    <ClInclude Include="include\finder.h" />
     <ClInclude Include="include\ui.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
@@ -134,7 +135,7 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(SolutionDir)\lib;$(SolutionDir)\build\lib;$(SolutionDir)..\LCUI\bin;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>LCUI_D.lib;LCUIMain.lib;sqlite3.lib</AdditionalDependencies>
+      <AdditionalDependencies>LCUI_D.lib;LCUIMain.lib;sqlite3.lib;user32.lib;</AdditionalDependencies>
     </Link>
     <PreLinkEvent>
       <Command>
@@ -198,7 +199,7 @@ cp $(SolutionDir)lib\LCUIMain.lib $(OutDir);</Command>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>$(SolutionDir)\lib;$(SolutionDir)..\LCUI\bin;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>LCUI.lib;LCUIMain.lib;</AdditionalDependencies>
+      <AdditionalDependencies>LCUI.lib;LCUIMain.lib;sqlite3.lib;user32.lib;</AdditionalDependencies>
     </Link>
     <PreLinkEvent>
       <Command>
