添加事件绑定，更新“设置”和“文件夹”视图

--- a/LC-Finder.vcxproj
+++ b/LC-Finder.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="src\finder.c" />
     <ClCompile Include="src\lib\file_cache.c" />
     <ClCompile Include="src\lib\file_search.c" />
+    <ClCompile Include="src\ui\view_folders.c" />
     <ClCompile Include="src\ui\view_settings.c" />
     <ClCompile Include="src\ui\sidebar.c" />
     <ClCompile Include="src\ui\ui.c" />
