--- a/LC-Finder.vcxproj.filters
+++ b/LC-Finder.vcxproj.filters
@@ -42,6 +42,12 @@
     <ClCompile Include="src\ui\view_folders.c">
       <Filter>源文件\ui</Filter>
     </ClCompile>
+    <ClCompile Include="src\lib\thumb_pool.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\lib\thumb_cache.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\main.css">
@@ -66,6 +72,12 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="include\finder.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="include\thumb_cache.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="include\thumb_pool.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
