--- a/LC-Finder.vcxproj.filters
+++ b/LC-Finder.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="src\lib\sha1.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\ui\file_sync.c">
+      <Filter>源文件\ui</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\main.css">
