更新样式和布局

--- a/LC-Finder.vcxproj
+++ b/LC-Finder.vcxproj
@@ -34,7 +34,8 @@
   <ItemGroup>
     <None Include="LICENSE" />
     <None Include="README.md" />
-    <None Include="res\main.css" />
+    <None Include="res\ui-skin.css" />
+    <None Include="res\ui.css" />
   </ItemGroup>
   <ItemGroup>
     <Xml Include="res\ui.xml">
