--- a/LC-Finder.vcxproj.filters
+++ b/LC-Finder.vcxproj.filters
@@ -54,6 +54,12 @@
     <ClCompile Include="src\ui\file_sync.c">
       <Filter>源文件\ui</Filter>
     </ClCompile>
+    <ClCompile Include="src\lib\file_info.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\lib\tile_item.c">
+      <Filter>源文件\ui</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="LICENSE" />
@@ -90,6 +96,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="include\sha1.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="include\tile_item.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
