更新缩略图缓存和滚动加载的实现代码，更改文件命名

--- a/LC-Finder.vcxproj
+++ b/LC-Finder.vcxproj
@@ -25,11 +25,11 @@
     <ClCompile Include="src\lib\file_info.c" />
     <ClCompile Include="src\lib\file_search.c" />
     <ClCompile Include="src\lib\sha1.c" />
+    <ClCompile Include="src\lib\thumb_db.c" />
     <ClCompile Include="src\lib\thumb_cache.c" />
-    <ClCompile Include="src\lib\thumb_pool.c" />
     <ClCompile Include="src\ui\file_sync.c" />
     <ClCompile Include="src\ui\scrollload.c" />
-    <ClCompile Include="src\ui\tile_item.c" />
+    <ClCompile Include="src\ui\tileitem.c" />
     <ClCompile Include="src\ui\view_folders.c" />
     <ClCompile Include="src\ui\view_settings.c" />
     <ClCompile Include="src\ui\sidebar.c" />
@@ -51,10 +51,11 @@
     <ClInclude Include="include\file_cache.h" />
     <ClInclude Include="include\file_search.h" />
     <ClInclude Include="include\finder.h" />
+    <ClInclude Include="include\scrollload.h" />
     <ClInclude Include="include\sha1.h" />
+    <ClInclude Include="include\thumb_db.h" />
     <ClInclude Include="include\thumb_cache.h" />
-    <ClInclude Include="include\thumb_pool.h" />
-    <ClInclude Include="include\tile_item.h" />
+    <ClInclude Include="include\tileitem.h" />
     <ClInclude Include="include\ui.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
