--- a/LC-Finder.vcxproj
+++ b/LC-Finder.vcxproj
@@ -28,9 +28,9 @@
     <ClCompile Include="src\lib\thumb_db.c" />
     <ClCompile Include="src\lib\thumb_cache.c" />
     <ClCompile Include="src\ui\file_sync.c" />
-    <ClCompile Include="src\ui\scrollload.c" />
     <ClCompile Include="src\ui\thumbview.c" />
     <ClCompile Include="src\ui\view_folders.c" />
+    <ClCompile Include="src\ui\view_home.c" />
     <ClCompile Include="src\ui\view_settings.c" />
     <ClCompile Include="src\ui\sidebar.c" />
     <ClCompile Include="src\ui\ui.c" />
@@ -51,7 +51,6 @@
     <ClInclude Include="include\file_cache.h" />
     <ClInclude Include="include\file_search.h" />
     <ClInclude Include="include\finder.h" />
-    <ClInclude Include="include\scrollload.h" />
     <ClInclude Include="include\sha1.h" />
     <ClInclude Include="include\thumb_db.h" />
     <ClInclude Include="include\thumb_cache.h" />
