--- a/LC-Finder.vcxproj.filters
+++ b/LC-Finder.vcxproj.filters
@@ -48,9 +48,6 @@
     <ClCompile Include="src\lib\file_info.c">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="src\ui\scrollload.c">
-      <Filter>源文件\ui</Filter>
-    </ClCompile>
     <ClCompile Include="src\lib\common.c">
       <Filter>源文件</Filter>
     </ClCompile>
@@ -64,6 +61,9 @@
       <Filter>源文件\ui</Filter>
     </ClCompile>
     <ClCompile Include="src\ui\thumbview.c">
+      <Filter>源文件\ui</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ui\view_home.c">
       <Filter>源文件\ui</Filter>
     </ClCompile>
   </ItemGroup>
@@ -105,9 +105,6 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="include\thumb_cache.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="include\scrollload.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="include\thumbview.h">
